--- a/test-work/index.html
+++ b/test-work/index.html
@@ -157,7 +157,7 @@
                         <div class="why-budss-articles__line">
                             <article class="articles-blocks">
                                 <div class="article-img-block">
-                                    <img src="public/article-img1.png" alt="" class="article-img">
+                                    <img src="public/article-img1.png" alt="Иконка телефона" class="article-img">
                                 </div>
                                 <div class="article-text-block">
                                     <h4 class="article__header">Turn your customers into loyal influencers</h3>
@@ -166,9 +166,9 @@
                             </article>
                             <article class="articles-blocks">
                                 <div class="article-img-block">
-                                    <img src="public/article-img2_turcoise.png" alt="" class="article-img">
-                                    <img src="public/article-img2_orange.png" alt="" class="article-img">
-                                    <img src="public/article-img2_purple.png" alt="" class="article-img">
+                                    <img src="public/article-img2_turcoise.png" alt="Пакет" class="article-img">
+                                    <img src="public/article-img2_orange.png" alt="Пакет" class="article-img">
+                                    <img src="public/article-img2_purple.png" alt="Пакет" class="article-img">
                                 </div>
                                 <div class="article-text-block">
                                     <h3 class="article__header">Harness the power of buying in bulk</h3>
@@ -179,7 +179,7 @@
                         <div class="why-budss-articles__line">
                             <article class="articles-blocks">
                                 <div class="article-img-block">
-                                    <img src="public/article-img3.png" alt="" class="article-img">
+                                    <img src="public/article-img3.png" alt="Иконка человечка" class="article-img">
                                 </div>
                                 <div class="article-text-block">
                                     <h4 class="article__header">Supercharge Loyalty With Instant Cash Back</h3>
@@ -188,7 +188,7 @@
                             </article>
                             <article class="articles-blocks">
                                 <div class="article-img-block">
-                                    <img src="public/article-img4.png" alt="" class="article-img">
+                                    <img src="public/article-img4.png" alt="Иконка человечек" class="article-img">
                                 </div>
                                 <div class="article-text-block">
                                     <h4 class="article__header">Seasoned with AI and Gamification</h3>
