--- a/test-work/index.html
+++ b/test-work/index.html
@@ -41,7 +41,7 @@
                     <img src="public/woman.png" alt="" class="woman-img">
                 </div>
                 <div class="banner__figure">
-                    <img src="public/business-hero-figure.webp" alt="" class="figure-img">
+                    <img src="public/banner-figure.webp" alt="" class="figure-img">
                 </div>
             </div>
         </section>
@@ -92,6 +92,9 @@
                             </p>
                         </li>
                     </ul>
+                </div>
+                <div class="about-figure__block">
+                    <img src="public/about-figure.webp" alt="" class="about-figure">
                 </div>
             </div>
         </section>
