animation how-works

--- a/test-work/index.html
+++ b/test-work/index.html
@@ -111,33 +111,36 @@
                     </div>
                 </div>
                 <div class="how-works__list-block">
-                    <ul class="how-works-block__list list-reset">
-                        <li class="how-works-block__item">
+                    <div class="animation-wrapper">
+                        <div class="how-works-block__list">
+                            How Budss Works
                             <span class="how-workss-block_item-text turquoise-text">How Budss Works</span>
-                        </li>
-                        <li class="how-works-block__item">
-                            <span class="how-workss-block_item-text transparent-text">How Budss Works</span>
-                        </li>
-                    </ul>
-                    <ul class="how-works-block__list list-reset">
-                        <li class="how-works-block__item">
-                            <span class="how-workss-block_item-text transparent-text">How Budss Works</span>
-                        </li>
-                        <li class="how-works-block__item">
+                            How Budss Works
+                            <span class="how-workss-block_item-text turquoise-text">How Budss Works</span>
+                        </div>
+                        <div class="how-works-block__list">
+                            How Budss Works
+                            <span class="how-workss-block_item-text turquoise-text">How Budss Works</span>
+                            How Budss Works
+                            <span class="how-workss-block_item-text turquoise-text">How Budss Works</span>
+                        </div>
+                    </div>
+                    <div class="animation-wrapper">
+                        <div class="how-works-block__list">
+                            How Budss Works
                             <span class="how-workss-block_item-text purple-text">How Budss Works</span>
-                        </li>
-                        <li class="how-works-block__item">
-                            <span class="how-workss-block_item-text white-text">How Budss Works</span>
-                        </li>
-                    </ul>
-                    <ul class="how-works-block__list list-reset">
-                        <li class="how-works-block__item">
+                            How Budss Works
+                            <span class="how-workss-block_item-text purple-text">How Budss Works</span>
+                        </div>
+                    </div>
+                    <div class="animation-wrapper">
+                        <div class="how-works-block__list">
+                            How Budss Works
                             <span class="how-workss-block_item-text orange-text">How Budss Works</span>
-                        </li>
-                        <li class="how-works-block__item">
-                            <span class="how-workss-block_item-text transparent-text">How Budss Works</span>
-                        </li>
-                    </ul>
+                            How Budss Works
+                            <span class="how-workss-block_item-text orange-text">How Budss Works</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
