--- a/test-work/index.html
+++ b/test-work/index.html
@@ -30,6 +30,19 @@
                 <button class="btn-reset header__btn contact-sales-btn"><span class="contact-sales-btn__text">Contact sales</span></button>
             </div>
         </header>
+        <div class="cookie-block visually-hidden">
+            <p class="cookie__text">
+                This website uses cookies to ensure you get the best experience on our website. They also allow us to analyze user behavior in order to constantly improve the website for you.
+            </p>
+            <div class="cookie-btn__block">
+                <button class="cookie__btn btn-reset accept"><span class="cookie-btn__text">Accept</span></button>
+                <button class="cookie__btn btn-reset decline"><span class="cookie-btn__text">Decline</span></button>
+            </div>
+            <svg class="close-cookie" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="26" height="26" rx="13" fill="white"/>
+                <path d="M12.9998 13L16.5353 16.5355M9.46424 16.5355L12.9998 13L9.46424 16.5355ZM16.5353 9.46447L12.9998 13L16.5353 9.46447ZM12.9998 13L9.46424 9.46447L12.9998 13Z" stroke="#B9B9B9" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>                
+        </div>
         <section class="section">
             <div class="banner">
                 <div class="banner__content">
@@ -112,12 +125,6 @@
                 </div>
                 <div class="how-works__list-block">
                     <div class="animation-wrapper">
-                        <div class="how-works-block__list">
-                            How Budss Works
-                            <span class="how-workss-block_item-text turquoise-text">How Budss Works</span>
-                            How Budss Works
-                            <span class="how-workss-block_item-text turquoise-text">How Budss Works</span>
-                        </div>
                         <div class="how-works-block__list">
                             How Budss Works
                             <span class="how-workss-block_item-text turquoise-text">How Budss Works</span>
