--- a/test-work/index.html
+++ b/test-work/index.html
@@ -36,13 +36,14 @@
                         <div class="bottom-bun"></div>
                     </label>
                     <div class="nav">
-                        <div class="nav-wrapper">
-                            <nav>
-                                <a href="#">HOME</a><br>
-                                <a href="#">ABOUT</a><br>
-                                <a href="#">WORK</a><br>
-                                <a href="#">SERVICES</a>
-                            </nav>
+                        <div class="mobile-list-block">
+                            <ul class="list-reset mobile-link-list">
+                                <li class="mobile-list-item"><a href="" class="mobile-list-link link-reset">For Business</a></li>
+                                <li class="mobile-list-item"><a href="" class="mobile-list-link link-reset">For Customers</a></li>
+                                <li class="mobile-list-item"><a href="" class="mobile-list-link link-reset">Privacy Policy</a></li>
+                                <li class="mobile-list-item"><a href="" class="mobile-list-link link-reset">Terms Of Use - Seller</a></li>
+                                <li class="mobile-list-item"><a href="" class="mobile-list-link link-reset">Terms of Use - Sellers & Customers</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -69,7 +70,10 @@
                     <button class="btn-reset contact-sales-btn banner__btn"><span class="contact-sales-btn__text">Contact sales</span></button>
                 </div>
                 <div class="banner__woman">
-                    <img src="public/woman.png" alt="" class="woman-img">
+                    <picture class="woman-picture">
+                        <source srcset="public/woman.png" media="(max-width: 475px)">
+                        <img src="public/mask.png" alt="" class="woman-img">
+                    </picture>
                 </div>
                 <div class="banner__figure">
                     <img src="public/banner-figure.webp" alt="" class="figure-img">
