--- a/yandex-landing/index.html
+++ b/yandex-landing/index.html
@@ -20,7 +20,16 @@
         </div>
         <div class="banner">
             <div class="container">
-                <h1 class="banner__header"></h1>
+                <h1 class="banner__header">
+                    <span class="banner__header__text">Превратите уездный город</span>
+                    <span class="banner__header__text">в столицу</span>
+                    <span class="banner__header__text">земного шара</span>
+                </h1>
+                <p class="banner_text">Оплатите взнос на телеграммы для организации Международного васюкинского турнира по шахматам</p>
+                <div class="banner__button__block">
+                    <button class="banner__button">Поддержать шахматную мысль</button>
+                    <button class="banner__button">Подробнее о турнире</button>
+                </div>
             </div>
         </div>
         <div class="marquee"></div>
