--- a/test-webpage/index.html
+++ b/test-webpage/index.html
@@ -127,7 +127,9 @@
                 <button class="application__btn">ОСТАВИТЬ ЗАЯВКУ</button>
             </form>
         </section>
-        <section class="section"></section>
+        <section class="section">
+            h2.benefits__header
+        </section>
         <section class="section"></section>
         <section class="section"></section>
         <section class="section"></section>
