--- a/yandex-landing/index.html
+++ b/yandex-landing/index.html
@@ -37,7 +37,8 @@
     <main class="main">
         <section class="section">
             <div class="container">
-
+                div
+                
             </div>
         </section>
         <section class="section">
